<resources>
    <string name="app_name">Julens 20411018</string>

    <string name="started_title">Hello You!</string>
    <string name="started_sub_title">
        Selamat Datang di aplikasi sederhana Saya!
        <br><b>Login</b> jika sudah memiliki akun.</br>
        <br><b>Register</b> untuk mulai menjelajahi aplikasi</br>
    </string>

    <string name="illustration_img">Illustration Image</string>

    <string name="btn_register">REGISTER</string>

    <string name="btn_login">LOGIN</string>

    <string name="login_title">Login Akun</string>
    <string name="login_sub_title">
        <font color="00C9B8"><b>Login</b></font>
        jika sudah memiliki akun.
    </string>

    <string name="login_email">Email atau Username</string>

    <string name="login_password">Password</string>

    <string name="login_forgot_pw">Lupa Password?</string>

    <string name="Login_havent_account">
        Tidak memiliki  Akun
        <font color="009B8"><b>Register</b></font>
    </string>


    <string name="regist_title">Buat Akun baru</string>
    <string name="regist_sub_title">
        <font color="00C9B8"><b>Register</b></font>
        untuk mulai menjelajahi aplikasi.
    </string>

    <string name="regist_name">Name</string>

    <string name="regist_email">email</string>

    <string name="regist_username">Username</string>

    <string name="regist_confirm_password">Konfirmasi Password</string>

    <string name="register_have_account">
        Saya sudah punya Akun
        <font color="009B8"><b>Login.</b></font>
    </string>

    <string name="home_title">Hallo User</string>
    <string name="home_sub_title">Selamat Datang di Halaman Home Aplikasi</string>

    <string name="btn_logout">LOGOUT</string>

    <string name="btn_camera">Buka Kamera</string>

    <string name="btn_lokasi">Buka Maps</string>

</resources>